周报 日报 月报

--- a/src/context/dianzixinxi.json
+++ b/src/context/dianzixinxi.json
@@ -45,6 +45,22 @@
         },
         {
             "txt":"抽象类和接口的对比? 抽象类是用来捕捉子类的通用特性的。接口是抽象方法的集合。从设计层面来说，抽象类是对类的抽象，是一种模板设计，接口是行为的抽象，是一种行为的规范。。"
+        },
+        {
+            "txt":"list、set、map问题?set 不允许重复，无序  list   允许重复，有序 map 成对的数据结构，键值必须具有唯一性"
+        },
+        {
+            "txt":"面向对象的特征?封装：通过定义类并且给类的属性和方法加上访问控制,继承：子类继承父类，子类可以拥有父类中已定义的方法，并且子类可以修改父类中的方法使其更适合特殊需求。多台：不同对象对统一消息作出不同响应称之为多态抽象：忽略与当前主题无关的那些方面，将注意力集中在与当前目标有关的方面"
+        },{
+            "txt":"多线程几种实现方法，同步?多线程有两种实现方法，一种是继承Thread类或者实现Runnable接口。同步就是在方法返回类型后面加上synchronized。"
+        },{
+            "txt":"xml解析技术?常用的DOM、SAX等DOM：处理大型文件时性能下降的非常厉害，适合对xml的随机访问 SAX：事件驱动型的xml解析方法，适合对xml的顺序访问"
+        },{
+            "txt":"简述JDBC?JDBC数据库连接，是一种用于执行SQL语句的Java　API，可以为多种关系型数据库提供统一访问。"
+        },{
+            "txt":"数据库三大范式?1：确保每列都是不可分割的原子值2：确保每列都和主键相关3：确保每列都和主键直接相关，而不是间接相关"
+        },{
+            "txt":"单例模式有哪些好处?单例模式是一种比较常见的设计模式，带给我们以下好处 1：控制资源的使用2：控制实例的产生数量3：让多个不相关的两个线程或进程之间实现通信"
         }
     ]
 }
